--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
     <img src="c:\Users\valer\AppData\Local\Temp\f9fad969-788f-422f-91ba-b6ca471695a7_img.zip.5a7\img\pexels-bill-emrich-230794-0.jpg">
     <img src="c:\Users\valer\AppData\Local\Temp\d14daada-6cf2-4a37-886d-b88f1a2011d5_img.zip.1d5\img\pexels-bill-emrich-230794-1.jpg">
     <img src="c:\Users\valer\AppData\Local\Temp\30eb7e84-0d6a-4d3d-8b00-e0875588a2df_img.zip.2df\img\pexels-bill-emrich-230794-2.jpg">
-    
+    <hr>
+       <h2> Le mie spese</h2>
+       <table>
+
+        <thead>
+            <tr>
+                <th>Nummero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aero</td>
+                <td>120</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Biglietto aero</td>
+                <td>120</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Biglietto aero</td>
+                <td>120</td>
+            </tr>
+            <tr>
+                <td>Totale</td>
+                <td>360</td>
+            </tr>
+        </tbody>
+       </table>
+       <hr>
+       <h3>Cose da fare</h3>
+       <ul>
+        <li>visistare la tower of London  </li>
+       </ul>
 </body>
 </html>
