--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
        <hr>
        <h3>Cose da fare</h3>
        <ul>
-        <li>visistare la tower of London  </li>
+        <li>Visitare la tower of London  </li>
+        <li>Visitare greenwich</li>
+        <li>Ascolater un artista di strada a Convent Garden</li>
+        <li>Mangiare il tipico Fish and Chips inglese</li>
        </ul>
+       <hr>
+       
 </body>
 </html>
