--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
         <li>Mangiare il tipico Fish and Chips inglese</li>
        </ul>
        <hr>
+       <h3>Info utili</h3>
+       <ol>
+        <li>Numeri di emergenza</li>
+        <ul>
+            <li>999-Emergenza</li>
+            <li>101-Numero polizia</li>
+            <li>111-Numero assistenza medica</li>
+        </ul>
+        <li>Hotel</li>
+        <ul>
+            <li><strong>Numero Hotel</strong>:Buckingham Palace</li>
+            <li><strong>Indirizzo Hotel</strong>:Westmister,London SW1A 1AA, Regno Unito </li>
+        </ul>
+        <li>Aereo</li>
+        <ul>
+            <li><strong>Volo di Andata</strong>: YI234X, ore 9:30 da Milano Malpensa</li>
+            <li><strong>Volo di Ritorno</strong>: YI236X, ore 18:30 da London Heathrow</li>
+        </ul>
+       </ol>
+       <hr>
        
+
+
 </body>
 </html>
