feat:add immagibi

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Il mio Viaggio a Londra</h1>
-    <img src="c:\Users\valer\AppData\Local\Temp\f9fad969-788f-422f-91ba-b6ca471695a7_img.zip.5a7\img\pexels-bill-emrich-230794-0.jpg">
-    <img src="c:\Users\valer\AppData\Local\Temp\d14daada-6cf2-4a37-886d-b88f1a2011d5_img.zip.1d5\img\pexels-bill-emrich-230794-1.jpg">
-    <img src="c:\Users\valer\AppData\Local\Temp\30eb7e84-0d6a-4d3d-8b00-e0875588a2df_img.zip.2df\img\pexels-bill-emrich-230794-2.jpg">
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     <hr>
        <h2> Le mie spese</h2>
        <table>
